--- a/.github/workflows/publish-readme.yaml
+++ b/.github/workflows/publish-readme.yaml
@@ -19,12 +19,10 @@ jobs:
 
       - name: Save outputs
         uses: actions/upload-artifact@v4
-        with:
-          name: path
-          path: ./output
+       
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./output
+          publish_dir: ./
