--- a/.github/workflows/publish-readme.yaml
+++ b/.github/workflows/publish-readme.yaml
@@ -19,7 +19,9 @@ jobs:
 
       - name: Save outputs
         uses: actions/upload-artifact@v4
-       
+        with:
+          name: path
+          path: ./
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
