--- a/.github/workflows/publish-readme.yaml
+++ b/.github/workflows/publish-readme.yaml
@@ -16,15 +16,20 @@ jobs:
         with:
           generate-html: true
           generate-pdf: true
+          config-file: .marp.yml
+
+      - name: Rename output files
+        run: |
+          mv  output/README.html output/index.html
 
       - name: Save outputs
         uses: actions/upload-artifact@v4
         with:
           name: path
-          path: ./
+          path: ./output
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./
+          publish_dir: ./output
