--- a/.github/workflows/publish-readme.yaml
+++ b/.github/workflows/publish-readme.yaml
@@ -11,16 +11,16 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Rename output files
+        run: |
+          mv README.md index.md
+
       - name: Convert Markdown into PDF
         uses: KoharaKazuya/marp-cli-action@v2
         with:
           generate-html: true
           generate-pdf: true
           config-file: .marp.yml
-
-      - name: Rename output files
-        run: |
-          mv  output/README.html output/index.html
 
       - name: Save outputs
         uses: actions/upload-artifact@v4
